--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,26 +16,17 @@
         android:theme="@style/Theme.MovieApp"
         tools:targetApi="31">
 
-        <!-- Login Activity -->
+        <!-- Main Activity -->
         <activity
-            android:name=".Login"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!-- Register Activity -->
-        <activity
-            android:name=".Register"
-            android:exported="false" />
-
-        <!-- Main Activity -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/app_name" />
     </application>
 
 </manifest>
